--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -40,6 +40,8 @@
         android:layout_width="205dp"
         android:layout_height="76dp"
         android:layout_weight="1"
-        android:text="@string/tv_item" />
+        android:autoText="true"
+        android:text="@string/tv_item"
+        app:autoSizeTextType="uniform" />
 
 </LinearLayout>
