--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -28,11 +28,11 @@
             app:srcCompat="@android:drawable/ic_menu_search" />
 
         <ImageButton
-            android:id="@+id/btn_option"
+            android:id="@+id/btn_sort"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_menu_preferences" />
+            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />
     </LinearLayout>
 
     <ListView
@@ -40,26 +40,5 @@
         android:layout_width="match_parent"
         android:layout_height="635dp"
         android:layout_weight="0" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="0"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_all_books"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/btn_all_books" />
-
-        <Button
-            android:id="@+id/btn_my_books"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/btn_my_books" />
-    </LinearLayout>
 
 </LinearLayout>
