--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -38,7 +38,7 @@
     <TextView
         android:id="@+id/tv_description"
         android:layout_width="205dp"
-        android:layout_height="76dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="@string/tv_item" />
 
