--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -27,18 +27,18 @@
             android:layout_weight="1"
             app:srcCompat="@android:drawable/ic_menu_search" />
 
-        <ImageButton
-            android:id="@+id/btn_sort"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />
     </LinearLayout>
+
+    <Spinner
+        android:id="@+id/sp_sort"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_weight="0" />
 
     <ListView
         android:id="@+id/lv_books"
         android:layout_width="match_parent"
-        android:layout_height="635dp"
+        android:layout_height="641dp"
         android:layout_weight="0" />
 
 </LinearLayout>
