Все основные моменты в рабочем состоянии. Можно пользоваться!

--- a/app/src/main/res/layout/activity_read.xml
+++ b/app/src/main/res/layout/activity_read.xml
@@ -32,13 +32,13 @@
     <Spinner
         android:id="@+id/sp_sort"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="wrap_content"
         android:layout_weight="0" />
 
     <ListView
         android:id="@+id/lv_books"
         android:layout_width="match_parent"
-        android:layout_height="641dp"
+        android:layout_height="match_parent"
         android:layout_weight="0" />
 
 </LinearLayout>
