--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -22,7 +22,7 @@
             android:text="@string/tv_item"/>
 
         <TextView
-            android:id="@+id/tv_genr"
+            android:id="@+id/tv_genre"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/tv_item"/>
